layout: z-index fixes, added empty check
Empty check in ModalTextWindow component

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,7 +2,6 @@
 
 .sidebar {
   position: relative;
-  z-index: 100;
   padding: 1.25rem;
   background-color: var(--component-bg);
   transition: background-color 0.3s ease-in-out;
