--- a/src/components/UI/CreateTask/CreateTask.scss
+++ b/src/components/UI/CreateTask/CreateTask.scss
@@ -73,7 +73,3 @@
   gap: 1.875rem;
   margin-bottom: 2.8125rem;
 }
-
-.create-task--hidden {
-  display: none;
-}
